app/tailwind.scss
@tailwind base;
@tailwind components;
@tailwind utilities;

//create a css variable
@layer base {
  :root {
    --color-primary-50: #f9f9f9;
    --color-primary-100: #c8d6fa;
    --color-primary-200: #8ca8f1;
    --color-primary-250: #758fd1;
    --color-primary-300: #5463e6;
    --color-primary-400: #4255ba;
    --color-primary-500: #30458e;
    --color-primary-600: #202660;
    --color-primary-700: #323232;

    ::-webkit-color-swatch-wrapper {
      @apply p-px aspect-square;
    }
    ::-webkit-color-swatch {
      @apply border-none rounded aspect-square;
    }
  }
}

.theme-pink {
  --color-primary-50: #f9f9f9;
  --color-primary-100: #fac8dd;
  --color-primary-200: #f18ca2;
  --color-primary-250: #e08297;
  --color-primary-300: #e65654;
  --color-primary-400: #ba425a;
  --color-primary-500: #8e3058;
  --color-primary-600: #602049;
  --color-primary-700: #40353e;
}

/* STYLES TO AVOID ANCHOR ADS MOVES THE LAYOUT */
body:has([data-anchor-shown="true"]) main > div {
  padding-top: calc(1.5rem + 15px);
}

@media (min-width: 768px) {
  body:has([data-anchor-shown="true"]) main > div {
    padding-top: 3.5rem;
  }
}
/* END STYLES TO AVOID ANCHOR ADS MOVES THE LAYOUT */

body {
  padding: 0 !important;
}

.admin-grid-background {
  min-height: 100vh;
  background: #f9f9f9;
}

@media (prefers-color-scheme: light) {
  .admin-grid-background {
    background:
      linear-gradient(rgba(249, 249, 249, 0.9), rgba(249, 249, 249, 0.86)),
      url("../public/squares-white.jpg") no-repeat center center fixed #f9f9f9;
    background-size: cover;
  }
}

@media (prefers-color-scheme: dark) {
  .admin-grid-background {
    background:
      linear-gradient(rgba(25, 25, 25, 0.08), rgba(25, 25, 25, 0.08)),
      url("../public/squares.png") no-repeat center center fixed #191919;
    background-size: cover;
  }
}

main > div {
  @apply px-5 py-6 xl:px-32 xl:py-14 short:py-1;
}

html {
  min-height: 100vh;

  div:has(> ins[data-ad-status="unfilled"]),
  .card:has(.google-ad-unit ins[data-ad-status="unfilled"]) {
    @apply hidden;
  }

  * {
    --sb-track-color: transparent;
    --sb-thumb-color: var(--color-primary-200);
    --sb-size: 8px;
  }

  *::-webkit-scrollbar {
    width: var(--sb-size);
  }

  *::-webkit-scrollbar-track {
    background: var(--sb-track-color);
    border-radius: 6px;
  }

  *::-webkit-scrollbar-thumb {
    background: var(--sb-thumb-color);
    border-radius: 6px;
    border: 5px solid transparent;
  }

  @supports not selector(::-webkit-scrollbar) {
    * {
      scrollbar-color: var(--sb-thumb-color) var(--sb-track-color);
    }
  }

  .start-countdown {
    position: absolute;
    top: 0;
    left: 0;
    color: white;
    background-color: #00000080;
    height: 100%;
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    z-index: 10;
  }
}

@media (prefers-color-scheme: light) {
  html {
    &:before {
      content: "";
      position: absolute;
      top: 0;
      left: 0;
      right: 0;
      bottom: 0;
      background: url("../public/squares-white.jpg") no-repeat center center
        scroll;
      background-blend-mode: color;
      background-size: cover;
      -webkit-background-size: cover;
      -moz-background-size: cover;
      -o-background-size: cover;
      opacity: 0.02;
      z-index: -1;
    }
  }
}

@media (prefers-color-scheme: dark) {
  html {
    background: url("../public/squares.png") no-repeat center center scroll
      #191919;
    background-size: cover;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    min-height: 100vh;
  }
}

